[package]
name = "venus"
version = "0.1.0"
edition = "2021"
description = "An environment to assemble and run Venus."
authors = ["Juliano Lorenzato <julianolorenzato@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
